syntax = "proto3";

option go_package = "greetpb";

message Greeting{
    int32 first_number = 1;
    int32 last_number = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    int32 result = 1;
}
message AverageRequest{
    float number = 1;
}

message AverageResponse{
    double average = 1;
}

message Greet1Request{
    string first_name = 1;
    string last_name = 2;
}

message Greet1Response{
    string result = 1;
}

message SquareRootRequest{
    int32 number =1;
}
message SquareRootResponse{
    double number =1;
}
message GreetWithDeadlineRequest{
    string first_name = 1;
}

message GreetWithDeadlineResponse{
    string result = 1;
}

service GreetService{
    
    rpc GreetUnary (GreetRequest) returns (GreetResponse) {};

    rpc GreetServerStreaming (GreetRequest) returns (stream GreetResponse) {};

    rpc ClientStreaming (stream AverageRequest) returns (AverageResponse) {};

    rpc BideStreaming (stream Greet1Request) returns (stream Greet1Response) {};

    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse){};

    rpc GreetWithDeadline (GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse){};
}